Fixed pixel on mobile

--- a/style.css
+++ b/style.css
@@ -293,15 +293,22 @@ p {
 }
 
 .carousel-item {
-  display: none;
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: 0.5s opacity ease-in-out;
+  transition-delay: 0s;
 }
 
 .carousel-item.carousel-active {
-  display: block; /* Show the active item */
-  animation: 0.5s linear 0s both fadeIn;
+  /* display: block; */ /* Show the active item */
+  opacity: 1;
+  z-index: 1;
+  transition-delay: 0ms;
+  /* animation: 0.5s linear 0s both fadeIn; */
 }
 
-@keyframes fadeIn {
+/* @keyframes fadeIn {
   from {
     opacity: 0;
   }
@@ -309,11 +316,12 @@ p {
     opacity: 1;
   }
 }
-
+ */
 .carousel-item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 .controls {
